Fixed Alignment

--- a/public/main.css
+++ b/public/main.css
@@ -20,7 +20,7 @@ body{
 .login-box h1{
   font-size: 40px;
   border-bottom: 6px solid #FFA5DF;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   padding: 13px 0;
 }
 #wrapper{
